# fast-api-lms

./: .gitignore  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
api/db/: db_setup.py
api/db/models/: course.py  user.py
db/: db_setup.py
